Refactored code so it's cleaner to read

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,5 @@
 bin/
 /References
+/.vs/BorkelRNVG/FileContentIndex
+/obj/Debug/net472/BorkelRNVG.AssemblyInfoInputs.cache
+/obj/Debug/net472/BorkelRNVG.AssemblyInfo.cs
