--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 bin/
-/References
-/.vs/BorkelRNVG/FileContentIndex
-/obj/Debug/net472/BorkelRNVG.AssemblyInfoInputs.cache
-/obj/Debug/net472/BorkelRNVG.AssemblyInfo.cs
-/.vs
+.vs/
+obj/
+References/
