Custom NVG shader implemented

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,4 @@ crashlytics-build.properties
 /obj/Debug/net472/BorkelRNVG.csproj.AssemblyReference.cache
 /obj/Debug/net472/BorkelRNVG.GeneratedMSBuildEditorConfig.editorconfig
 /obj/Debug/net472/PluginInfo.cs
+*.psd
