--- a/BorkelRNVG.csproj
+++ b/BorkelRNVG.csproj
@@ -22,20 +22,17 @@
   </ItemGroup>
   
   <ItemGroup>
-    <Reference Include="Aki.Reflection">
-      <HintPath>C:\SPTarkov3.8.0\EscapeFromTarkov_Data\Managed\Aki.Reflection.dll</HintPath>
-    </Reference>
     <Reference Include="Assembly-CSharp">
-      <HintPath>C:\SPTarkov3.8.0\EscapeFromTarkov_Data\Managed\Assembly-CSharp.dll</HintPath>
-    </Reference>
-    <Reference Include="Assembly-CSharp-firstpass">
-      <HintPath>C:\SPTarkov3.8.0\EscapeFromTarkov_Data\Managed\Assembly-CSharp-firstpass.dll</HintPath>
+      <HintPath>C:\SPTarkov3.9.0\EscapeFromTarkov_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
     <Reference Include="Comfort">
-      <HintPath>C:\SPTarkov3.8.0\EscapeFromTarkov_Data\Managed\Comfort.dll</HintPath>
+      <HintPath>C:\SPTarkov3.9.0\EscapeFromTarkov_Data\Managed\Comfort.dll</HintPath>
     </Reference>
     <Reference Include="ItemComponent.Types">
-      <HintPath>C:\SPTarkov3.8.0\EscapeFromTarkov_Data\Managed\ItemComponent.Types.dll</HintPath>
+      <HintPath>C:\SPTarkov3.9.0\EscapeFromTarkov_Data\Managed\ItemComponent.Types.dll</HintPath>
+    </Reference>
+    <Reference Include="spt-reflection">
+      <HintPath>C:\SPTarkov3.9.0\BepInEx\plugins\spt\spt-reflection.dll</HintPath>
     </Reference>
   </ItemGroup>
 </Project>
